--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,4 +6,9 @@
   .heroButton {
     @apply px-6 py-2 border border-[#242424] rounded-full uppercase text-xs tracking-widest text-gray-500 transition-all hover:text-[#F7AB0A] hover:border-[#F7AB0A];
   }
+
+  .contactInput {
+    @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4 border-[#242424] text-gray-500 placeholder-gray-500 transition-all 
+    focus:border-[#F7AB0A] focus:text-[#F7AB0A] hover:border-[#F7AB0A];
+  }
 }
