--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,11 +4,11 @@
 
 @layer components {
   .heroButton {
-    @apply px-6 py-2 border border-[#242424] rounded-full uppercase text-xs tracking-widest text-gray-500 transition-all hover:text-[#F7AB0A] hover:border-[#F7AB0A];
+    @apply px-6 py-2 border border-[#242424] rounded-full uppercase text-xs tracking-widest text-gray-500 transition-all hover:text-primary hover:border-primary;
   }
 
   .contactInput {
     @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4 border-[#242424] text-gray-500 placeholder-gray-500 transition-all 
-    focus:border-[#F7AB0A] focus:text-[#F7AB0A] hover:border-[#F7AB0A];
+    focus:border-primary focus:text-primary hover:border-primary;
   }
 }
