feat: better mobile responsive contact

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,7 @@
   }
 
   .contactInput {
-    @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4 border-[#242424] text-gray-500 placeholder-gray-500 transition-all 
+    @apply outline-none bg-slate-400/10 rounded-sm border-b px-5 md:px-6 py-3 md:py-4 border-[#242424] text-gray-500 placeholder-gray-500 transition-all 
     focus:border-primary focus:text-primary hover:border-primary;
   }
 }
